Mon Jun 18 20:26:23 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* random.c (rb_random_int32): get rid of "warning: constant 0x100000000
	  is so big it is long" warning.

Mon Jun 18 20:07:23 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* dir.c (dir_initialize): get rid of "unused return: argc = rb_scan_args()"
	  warning.

Mon Jun 18 19:31:20 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* include/ruby/missing.h: include math.h before checking INFINITY
	  and NAN. Otherwise, strange macro redefinition will occur.

Mon Jun 18 19:12:37 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* array.c (ary_reverse): use ansi style declaration.

Tue Jun 19 18:43:50 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/backward/rubysig.h: fix visibility.  [Bug #6607]

Tue Jun 19 17:51:54 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_execarg_run_options): do not call any methods in the
	  async-signal-safe function.  mask has been checked with NUM2MODET()
	  already and converted with LONG2NUM().

Tue Jun 19 11:59:56 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (Init_readline): don't set 0 to
	  rl_catch_signals and rl_catch_sigwinch. [Bug #5423]

Tue Jun 19 11:52:59 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (readline_s_get_special_prefixes): suppress
	  warning: unitinialized instance variable.

Tue Jun 19 11:43:16 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (readline_getc): fix editline compatibility
	  broken by r36123. [Bug #6601]

Mon Jun 18 17:10:08 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_subpos): split from rb_str_substr.  returns
	  adjusted position for substring.

Mon Jun 18 10:42:57 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/readline.c (readline_getc): deal with ESC just followed
	  by ASCII as meta prefix in incremental search mode.  based on the